--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@openzeppelin/hardhat-upgrades": "^1.9.0",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.4.0"
+    "ethers": "^5.4.0",
+    "hardhat-gas-reporter": "^1.0.4"
   }
 }
